@@ -55,12 +55,8 @@
   <dependencies>
     <dependency org="checkstyle" name="checkstyle" rev="${checkstyle.version}"
       conf="checkstyle->master"/>
-    <!-- <dependency org="antlr" name="antlr" rev="${antlr.version}"
-      conf="checkstyle->master"/> -->
     <dependency org="commons-beanutils" name="commons-beanutils-core" rev="${commons-beanutils.version}"
       conf="checkstyle->master"/>
-    <dependency org="xmlenc" name="xmlenc" rev="${xmlenc.version}"
-      conf="hadoop2->master"/>
     <dependency org="com.sun.jersey" name="jersey-bundle" rev="${jersey.version}"
       conf="hadoop2->master"/>
     <dependency org="com.sun.jersey" name="jersey-server" rev="${jersey.version}"
@@ -68,8 +64,6 @@
     <dependency org="com.sun.jersey.contribs" name="jersey-guice" rev="${jersey.version}"
       conf="hadoop2->master"/>
     <dependency org="commons-codec" name="commons-codec" rev="${commons-codec.version}"
-      conf="hadoop2->master"/>
-    <dependency org="commons-httpclient" name="commons-httpclient" rev="${commons-httpclient.version}"
       conf="hadoop2->master"/>
     <dependency org="commons-el" name="commons-el" rev="${commons-el.version}"
       conf="compile->master"/>
