@@ -26,13 +26,11 @@ commons-codec.version=1.4
 commons-io.version=2.3
 commons-el.version=1.0
 commons-logging.version=1.1.1
-commons-lang.version=2.4
+commons-lang.version=2.6
 commons-configuration.version=1.6
 commons-collections.version=3.2.1
 commons-collections4.version=4.0
-commons-httpclient.version=3.1
 commons-math3.version=3.1.1
-xmlenc.version=0.52
 jersey.version=1.8
 checkstyle.version=4.2
 ivy.version=2.2.0
@@ -44,7 +42,7 @@ hadoop-mapreduce.version=2.7.3
 hbase1.version=1.2.4
 hsqldb.version=1.8.0.10
 hive.version=1.2.1
-httpcomponents.version=4.1
+httpcomponents.version=4.4
 jackson.version=1.9.13
 jackson-pig-3039-test.version=1.9.9
 javacc.version=4.2
@@ -95,6 +93,6 @@ snappy.version=0.2
 leveldbjni.version=1.8
 curator.version=2.6.0
 htrace.version=3.1.0-incubating
-commons-lang3.version=3.1
+commons-lang3.version=3.6
 scala-xml.version=1.0.5
 glassfish.el.version=3.0.1-b08
